# zeus

./: .gitignore  .hermes-railgun-progress.md  .prettierrc.json  Cargo.toml  Cross.toml  LICENSE-MIT  RAILGUN_ROADMAP.md  my-custom-theme.json  pool_data.json  readme.md  rustfmt.toml  token_data.data  zeus-theme.json
crates/egui-theme/: .prettierrc.json  Cargo.toml  readme.md
crates/egui-theme/examples/: demo.rs
crates/egui-theme/src/: editor.rs  lib.rs  utils.rs  window.rs
crates/egui-theme/src/themes/: dark.rs  dark_classic.rs  frappe.rs  latte.rs  midnight.rs  mocha.rs  mod.rs  nord.rs  tokyo_night.rs
crates/tests/: Cargo.toml
crates/tests/src/: secure_string.rs
crates/zeus-bip32/: Cargo.toml  readme.md
crates/zeus-bip32/src/: error.rs  lib.rs  path.rs  primitives.rs  xpriv.rs
crates/zeus-eth/: Cargo.toml  readme.md
crates/zeus-eth/crates/abi/: Cargo.toml
crates/zeus-eth/crates/abi/src/: erc20.rs  lib.rs  misc.rs  permit.rs  weth9.rs
crates/zeus-eth/crates/amm/: Cargo.toml
crates/zeus-eth/crates/amm/src/: consts.rs  lib.rs  (+4 more)
crates/zeus-eth/crates/currency/: Cargo.toml
crates/zeus-eth/crates/dapps/: Cargo.toml
crates/zeus-eth/crates/revm-utils/: Cargo.toml
crates/zeus-eth/crates/types/: Cargo.toml
crates/zeus-eth/crates/utils/: Cargo.toml
crates/zeus-eth/crates/wallet/: Cargo.toml
crates/zeus-eth/examples/: revm.rs  simulate_position.rs  swap.rs
crates/zeus-eth/src/: lib.rs  prelude.rs
crates/zeus-eth/src/abi/: misc.rs  mod.rs  permit.rs  zeus.rs  zeus_router.rs
crates/zeus-eth/src/currency/: erc20.rs  mod.rs  native.rs
crates/zeus-eth/src/defi/: mod.rs
crates/zeus-eth/src/revm_utils/: mod.rs  simulate.rs
crates/zeus-eth/src/types/: block_time.rs  chain.rs
crates/zeus-eth/src/utils/: address_book.rs  batch.rs  batch_old.rs  client.rs  mod.rs  price_feed.rs  secure_signer.rs
crates/zeus-poseidon/: Cargo.toml  README.md  justfile
crates/zeus-poseidon/benches/: poseidon_hash.rs
crates/zeus-poseidon/src/: error.rs  lib.rs  poseidon.rs
crates/zeus-poseidon/src/bn254/: circom_t10.rs  circom_t11.rs  circom_t12.rs  circom_t13.rs  circom_t14.rs  circom_t2.rs  circom_t3.rs  circom_t4.rs  circom_t5.rs  circom_t6.rs  circom_t7.rs  circom_t8.rs  circom_t9.rs  mod.rs  parameters.sage  parameters.sage.py
crates/zeus-railgun/: Cargo.toml  README.md  build.rs
crates/zeus-railgun-prover/: Cargo.toml  README.md  package-lock.json
crates/zeus-railgun-prover/js-sidecar/: package-lock.json  package.json
crates/zeus-railgun-prover/js-sidecar/src/: index.js
crates/zeus-railgun-prover/src/: client.rs  lib.rs  models.rs
crates/zeus-railgun-prover/tests/: sidecar_test.rs
crates/zeus-railgun/examples/: engine.rs
crates/zeus-railgun/src/: README.md  adapter_data.rs  address.rs  builders.rs  caip.rs  chain_config.rs  contracts.rs  engine.rs  lib.rs  merkle.rs  note.rs  provider.rs  scanner.rs  sidecar_assets.rs  types.rs
crates/zeus-railgun/src/abi/: legacy.rs  mod.rs  railgun.rs
crates/zeus-railgun/src/account/: address.rs  keys.rs  mod.rs  signer.rs
crates/zeus-railgun/src/circuit/: groth16_prover.rs  mod.rs  proof.rs  remote_artifact_loader.rs  witness.rs
crates/zeus-railgun/src/crypto/: aes.rs  babyjubjub.rs  common.rs  keys.rs  mod.rs  railgun_base_37.rs  railgun_txid.rs  railgun_zero.rs  serializable_np_index.rs
crates/zeus-railgun/src/database/: fs.rs  memory.rs  mod.rs  railgun_db.rs  redb.rs
crates/zeus-railgun/src/indexer/: indexed_account.rs  mod.rs  txid_indexer.rs  utxo_indexer.rs
crates/zeus-railgun/src/merkle_tree/: config.rs  hex_u256.rs  mod.rs  proof.rs  tree.rs  txid_tree.rs  utxo_tree.rs
crates/zeus-railgun/src/note/: encrypt.rs  mod.rs  operation.rs  transfer.rs  unshield.rs  utxo.rs
crates/zeus-railgun/src/poi/: client.rs  mod.rs  note.rs  provider.rs  types.rs
crates/zeus-railgun/src/transact/: mod.rs  proved_transaction.rs  shield_builder.rs  transaction_builder.rs
crates/zeus-theme/: Cargo.toml  readme.md
crates/zeus-theme/examples/: demo.rs
crates/zeus-theme/src/: editor.rs  hsla.rs  lib.rs  utils.rs  visuals.rs  window.rs
crates/zeus-theme/src/themes/: dark.rs  light.rs  mod.rs  tokyo_night.rs
crates/zeus-token-list/: Cargo.toml  readme.md
crates/zeus-token-list/src/: lib.rs
crates/zeus-token-list/src/tokens/: mod.rs  readme.md
crates/zeus-ui-components/: Cargo.toml  readme.md
crates/zeus-ui-components/assets/: credits.md
crates/zeus-ui-components/examples/: credentials_form.rs
crates/zeus-ui-components/src/: credentials_form.rs  input_field.rs  lib.rs  qr_image.rs  qr_scanner.rs  virtual_keyboard.rs
crates/zeus-userop-kit/: Cargo.toml  README.md  build.rs
crates/zeus-userop-kit/src/: builder.rs  entry_point.rs  lib.rs  signable_user_operation.rs  signed_user_operation.rs  user_operation.rs
crates/zeus-userop-kit/src/abis/: entry_point.rs
crates/zeus-userop-kit/src/bundler/: bundler.rs  mod.rs  pimlico.rs  rpc_client.rs
crates/zeus-userop-kit/src/smart_account/: mod.rs  simple_smart_account.rs  smart_account.rs
crates/zeus-userop-kit/src/snapshots/: userop_kit__signable_user_operation__tests__hash.snap  userop_kit__signable_user_operation__tests__pack.snap  userop_kit__signable_user_operation__tests__sign.snap
crates/zeus-waku-broadcaster/: Cargo.toml  README.md
crates/zeus-waku-broadcaster/examples/: waku_sidecar_test.rs
crates/zeus-waku-broadcaster/js-sidecar/: README.md  package-lock.json  package.json
crates/zeus-waku-broadcaster/js-sidecar/src/: index.js
crates/zeus-waku-broadcaster/src/: client.rs  encryption.rs  fees.rs  lib.rs  models.rs  sidecar.rs  transact.rs  waku.rs
crates/zeus-waku-broadcaster/src/fees/: best_broadcaster.rs  fee_cache.rs  mod.rs
crates/zeus-waku-broadcaster/src/models/: fee_message.rs  mod.rs  transact.rs
crates/zeus-wallet/: Cargo.toml  readme.md
crates/zeus-wallet/src/: lib.rs  secure_key.rs  wallet.rs  zk.rs
crates/zeus-wallet/src/zk/: mod.rs
crates/zeus-widgets/: Cargo.toml  readme.md
crates/zeus-widgets/src/: button.rs  combo_box.rs  label.rs  lib.rs  qr_scanner.rs  secure_text_edit.rs  text_edit.rs
(+324 files in other folders)
