[workspace]
resolver = "2"
members = ["crates/zeus-theme", "crates/zeus-eth", "crates/egui-widgets", "crates/deploy", "crates/zeus-bip32"]

[package]
name = "zeus"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2024"
default-run = "zeus"


[dependencies]

# GUI
eframe = {version = "=0.33.0", features = ["wgpu"]}
egui = {version = "=0.33.0", features = ["serde"]}
egui_extras = {version = "=0.33.0", features = ["image"]}
egui-widgets = {path = "crates/egui-widgets"}
image = "=0.25.6"


# Zeus Crates
zeus-bip32 = { path = "crates/zeus-bip32" }
zeus-eth = { path = "crates/zeus-eth" }
zeus-theme = { path = "crates/zeus-theme", features = ["serde"]}

# Alloy
alloy-consensus = "=1.0.41"
alloy-signer-local = {version = "=1.0.41", features = ["mnemonic"]}
alloy-eips = "=1.0.41"
alloy-sol-types = {version = "=1.4.1", features = ["json"]}


# Crypto
sha3 = "=0.10.8"
sha2 = "=0.10.9"
hmac = "=0.12.1"
ripemd = "=0.1.3"
rand = "=0.8"
generic-array = {version = "=1.2.0", features = ["zeroize"]}

# Encryption
ncrypt-me = "0.1"

# Memory
secure-types = "0.2"


# Tracing
tracing = "=0.1.41"
tracing-subscriber = {version = "=0.3.20", features = ["env-filter", "fmt"]}
tracing-appender = "=0.2.3"

# Async
tokio = { version = "=1.47.1", features = ["rt-multi-thread"] }
warp = {version = "=0.4.2", features = ["server"]}
futures = "=0.3.31"
reqwest = { version = "=0.12.23", features = ["json"] }
governor = { version = "0.10.1", features = ["jitter"] }


# Misc
sysinfo = "=0.37.2"
chrono = "0.4.42"
either = "=1.15.0"
rayon = "=1.11.0"
anyhow = "=1.0.99"
thiserror = "=2.0.17"
serde = {version = "=1.0.228", features = ["derive"]}
serde_json = "=1.0.145"
lazy_static = "=1.5.0"
bincode = "=2.0.1"

[profile.prod]
inherits = "release"
codegen-units = 32
incremental = true
strip = true
# Slightly smaller binary size than level 3
opt-level = 2
debug = false
lto = "fat"


[features]
dev = []

[lints.clippy]
new_without_default = "allow"
too_many_arguments = "allow"
unnecessary_unwrap = "allow"
needless_return = "allow"
needless_borrow = "deny"
