[workspace]
resolver = "2"
members = [
    "crates/zeus-theme",
    "crates/zeus-eth",
    "crates/zeus-widgets",
    "crates/zeus-bip32",
    "crates/zeus-wallet",
    "crates/zeus-railgun",
    "crates/zeus-waku-broadcaster",
    "crates/zeus-railgun-prover", "crates/zeus-railgun-shared",
]

[package]
name = "zeus"
authors = ["Michalis Molfetas"]
description = "A truly seedless and decentralized self-custodial Ethereum wallet"
version = "0.8.20"
edition = "2024"
default-run = "zeus"


[dependencies]

# GUI
eframe = { version = "=0.34.3", features = ["wgpu"] }
egui = { version = "=0.34.3", features = ["serde"] }
egui_extras = { version = "=0.34.3", features = ["image"] }
image = "=0.25.10"


# Zeus Crates
zeus-bip32 = { path = "crates/zeus-bip32", features = ["serde"] }
zeus-wallet = { path = "crates/zeus-wallet", features = ["serde"] }
zeus-eth = { path = "crates/zeus-eth" }
zeus-theme = { path = "crates/zeus-theme", features = ["serde"] }
zeus-widgets = { path = "crates/zeus-widgets", features = ["secure-types"] }
zeus-ui-components = { path = "crates/zeus-ui-components", features = [
    "secure-types",
    "qr-scanner",
] }

# Alloy
alloy-consensus = "=2.0.5"
alloy-signer-local = { version = "=2.0.5", features = ["mnemonic"] }
alloy-eips = "=2.0.5"
alloy-sol-types = { version = "=1.6.0", features = ["json"] }


# Crypto
rand = "=0.8"
generic-array = { version = "=1.2.0", features = ["zeroize"] }
minisign-verify = "0.2.4"

# Encryption
ncrypt-me = "0.3"

# Memory
secure-types = "0.3"


# Tracing
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
tracing-appender = "=0.2.3"

# Async
tokio = { version = "=1.47.1", features = ["rt-multi-thread"] }
warp = { version = "=0.4.2", features = ["server"] }
futures = "=0.3.31"
reqwest = { version = "=0.12.23", features = ["json"] }


# Misc
zip = "=6.0.0"
tempfile = "=3.23.0"
semver = "=1.0.27"
self_update = "0.42"
qrcodegen-no-heap = "1.8.1"
sysinfo = "=0.37.2"
chrono = "0.4.42"
either = "=1.15.0"
rayon = "=1.11.0"
anyhow = "=1.0.99"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
lazy_static = "=1.5.0"
bincode-next = "3.1.1"

[profile.prod]
inherits = "release"
codegen-units = 32
incremental = true
strip = true
# Slightly smaller binary size than level 3
opt-level = 2
debug = false
lto = "fat"


[features]
dev = []
debug = []

[lints]
clippy = { new_without_default = "allow", too_many_arguments = "allow", unnecessary_unwrap = "allow", needless_return = "allow", needless_borrow = "deny" }
