[package]
name = "egui-theme"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2024"
description = "Theme selection & customization for egui"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/egui-theme"
license = "MIT OR Apache-2.0"
keywords = ["egui", "theme", "style"]
categories = ["gui"]

[dependencies.egui]
version = "=0.32.3"


[dependencies.serde_json]
version = "=1.0.145"
optional = true


[dependencies.serde]
version = "=1.0.226"
optional = true
features = ["derive"]

[dev-dependencies]
eframe = "=0.32.3"



[features]
serde = ["dep:serde", "dep:serde_json", "egui/serde"]