[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies.egui-widgets]
path = "../egui-widgets"

#[dependencies.zeus-eth]
#path = "../zeus-eth"

[dependencies.tokio]
version = "=1.47.1"

[dependencies.url]
version = "=2.5.7"

[dependencies.anyhow]
version = "=1.0.99"

[dependencies.secure-types]
version = "0.2"

[dependencies.egui]
version = "=0.32.0"

[dependencies.eframe]
version = "=0.32.0"


[[bin]]
name = "secure_string"
path = "src/secure_string.rs"