[package]
name = "zeus-bip32"
description = "BIP32 Key Derivation"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-bip32"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies.sha3]
version = "=0.10.8"

[dependencies.sha2]
version = "=0.10.9"

[dependencies.hmac]
version = "=0.12.1"

[dependencies.ripemd]
version = "=0.1.3"

[dependencies.k256]
version = "=0.13.4"

[dependencies.secure-types]
version = "0.2"

[dependencies.thiserror]
version = "=2.0.17"

[dependencies.serde]
version = "=1.0.228"
features = ["derive"]
optional = true

[features]
serde = ["dep:serde", "secure-types/serde"]