[package]
name = "zeus-bip32"
description = "BIP32 Key Derivation"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-bip32"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sha3 = "=0.10.8"
sha2 = "=0.10.9"
hmac = "=0.12.1"
ripemd = "=0.1.3"
k256 = "=0.13.4"
secure-types = "0.2"
thiserror = "=2.0.17"
serde = { version = "=1.0.228", optional = true, features = ["derive"] }


[features]
serde = ["dep:serde", "secure-types/serde"]