[package]
name = "zeus-eth"
version = "0.1.0"
edition = "2024"

[dependencies]

alloy-sol-types = {version = "=1.3.1", features = ["json"]}
alloy-dyn-abi = {version = "=1.3.1", features = ["eip712"]}
alloy-primitives = "=1.3.1"
alloy-signer-local = "=1.0.36"
alloy-signer = {version = "=1.0.36", features = ["eip712"]}

alloy-rpc-types = "=1.0.36"
alloy-json-rpc = "=1.0.36"
alloy-contract = "=1.0.36"
alloy-network = "=1.0.36"
alloy-provider = {version = "=1.0.36", features = ["ws"]}
alloy-transport = {version = "=1.0.36", features = ["throttle"]}
alloy-rpc-client = {version = "=1.0.36", features = ["reqwest"]}

revm = { version = "=29.0.1", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

op-revm = "=10.1.0"

rayon = "=1.11.0"
tokio = {version = "=1.47.1", features = ["rt-multi-thread"]}
futures = "=0.3.31"
tower = "=0.5.2"

uniswap_v3_math = { git = "https://github.com/greekfetacheese/uniswap-v3-math.git", branch = "main" }

secure-types = {version = "0.2", features = ["serde"]}


tracing = "=0.1.41"
url = "=2.5.7"
anyhow = "=1.0.99"
serde = "=1.0.228"
serde_json = "=1.0.145"
thiserror = "=2.0.17"

[dev-dependencies]
rand = "0.8"