[package]
name = "zeus-eth"
version = "0.1.0"
edition = "2024"

[dependencies]

alloy-sol-types = {version = "=1.6.0", features = ["json"]}
alloy-dyn-abi = {version = "=1.6.0", features = ["eip712"]}
alloy-primitives = "=1.6.0"
alloy-signer-local = "=2.0.5"
alloy-signer = {version = "=2.0.5", features = ["eip712"]}

alloy-rpc-types = "=2.0.5"
alloy-json-rpc = "=2.0.5"
alloy-contract = "=2.0.5"
alloy-network = "=2.0.5"
alloy-provider = {version = "=2.0.5", features = ["ws"]}
alloy-transport = {version = "=2.0.5", features = ["throttle"]}
alloy-rpc-client = {version = "=2.0.5", features = ["reqwest"]}

revm = { version = "=40.0.3", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

tokio = {version = "=1.47.1", features = ["rt-multi-thread"]}
futures = "=0.3.31"
tower = "=0.5.2"

uniswap_v3_math = { git = "https://github.com/greekfetacheese/uniswap-v3-math.git", branch = "main" }

secure-types = {version = "0.2", features = ["serde"]}


tracing = "=0.1.41"
url = "=2.5.7"
anyhow = "=1.0.99"
serde = "=1.0.228"
serde_json = "=1.0.145"
thiserror = "=2.0.17"

[dev-dependencies]
rand = "0.8"