[package]
name = "zeus-eth"
description = "Utilities to interact with Ethereum"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-eth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]

# Alloy
alloy-sol-types = {version = "=1.6.0", features = ["json"]}
alloy-dyn-abi = {version = "=1.6.0", features = ["eip712"]}
alloy-primitives = "=1.6.0"
alloy-signer-local = "=2.0.5"
alloy-signer = {version = "=2.0.5", features = ["eip712"]}

alloy-rpc-types = "=2.0.5"
alloy-json-rpc = "=2.0.5"
alloy-contract = "=2.0.5"
alloy-network = "=2.0.5"
alloy-provider = {version = "=2.0.5", features = ["ws"]}
alloy-transport = {version = "=2.0.5", features = ["throttle"]}
alloy-rpc-client = {version = "=2.0.5", features = ["reqwest"]}

# EVM
revm = { version = "=40.0.3", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

# Async
tokio = {version = "1", features = ["rt-multi-thread"]}
futures = "0.3"
tower = "0.5"

# Misc
tracing = "0.1"
url = "2.5.7"
anyhow = "1"
serde = "1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
rand = "0.8"