[package]
version = "0.1.0"
edition = "2021"
name = "poseidon-rust"
rust-version = "1.75"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/poseidon-rust"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[dependencies]
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-serialize = "0.6"
ark-std = { version = "0.6", features = ["getrandom"] }
itertools = "0.14.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "2"

[dev-dependencies]
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "poseidon_hash"
harness = false
