[package]
name = "zeus-railgun"
version = "0.1.0"
edition = "2024"

[dependencies]

# Alloy
alloy-sol-types = "=1.6.0"
alloy-primitives = "=1.6.0"
alloy-rpc-types = "=2.0.5"
alloy-provider = "=2.0.5"

# Crypto
sled = "0.34"
chacha20poly1305 = "0.10"
bech32 = "0.9"
hex = "=0.4.3"
sha2 = "0.10.9"
aes-gcm = "0.10"
hmac = "0.12.1"
jubjub = "0.10.0"
ark-ed-on-bn254 = "0.5.0"
blake2 = "0.10.6"
curve25519-dalek = "4"
num-bigint = "0.4"
ark-ff = "0.5.0"
ark-bn254 = "0.5.0"
light-poseidon = "0.4.0"
k256 = "=0.13.4"
sha3 = "=0.10.8"


# Misc
rand = "0.8"
lazy_static = "1"
anyhow = "=1.0.99"
secure-types = "0.3"

[dev-dependencies]
bip39 = "2"
zeus-wallet = { path = "../zeus-wallet" }
