[package]
name = "zeus-railgun"
version = "0.1.0"
edition = "2024"

[dependencies]

# Alloy
alloy-sol-types = { version = "=1.6.0", features = ["json"] }
alloy-primitives = "=1.6.0"
alloy-rpc-types = "=2.0.5"
alloy-provider = "=2.0.5"
alloy-contract = "=2.0.5"

# Internal
poseidon-rust = { path = "../zeus-poseidon" }

# Crypto
chacha20poly1305 = "0.10"
hex = "=0.4.3"
bech32 = "0.9"
sha2 = "0.10.9"
aes-gcm = "0.10"
aes = "0.8"
ctr = "0.9"
hmac = "0.12.1"
curve25519-dalek = "4"
ed25519-dalek = "2.2.0"
blake-hash = { version = "0.2.0", default-features = false }
ruint = { version = "1", features = ["serde", "num-bigint"] }
num-bigint = "0.4"
num-traits = "0.2"
ark-ff = "0.6.0"
ark-ed-on-bn254 = "0.6.0"
ark-bn254 = "0.6.0"
#light-poseidon = "0.4.0"
k256 = "=0.13.4"
sha3 = "=0.10.8"

# Misc
redb = "4"
rand = "0.8"
lazy_static = "1"
anyhow = "=1.0.99"
serde_json = "1"
secure-types = "0.3"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros", "fs"] }


[dev-dependencies]
bip39 = "2"
zeus-wallet = { path = "../zeus-wallet" }