[package]
name = "zeus-theme"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2024"
description = "Theme color styling for egui"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-theme"
license = "MIT OR Apache-2.0"
keywords = ["egui", "ui", "themes", "style"]
categories = ["gui"]

[dependencies.egui]
version = "=0.33.0"

[dependencies.palette]
version = "0.7.6"


[dependencies.serde_json]
version = "1"
optional = true


[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
eframe = "=0.33.0"



[features]
serde = ["dep:serde", "palette/serde", "dep:serde_json", "egui/serde"]