[package]
name = "zeus-ui-components"
authors = ["Michalis Molfetas"]
version = "0.1.0"
edition = "2024"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-ui-components"
license = "MIT OR Apache-2.0"
keywords = ["egui", "ui"]
categories = ["gui"]

[dependencies]
egui = "0.33.3"

zeus-theme = { version = "0.3", path = "../zeus-theme" }
zeus-widgets = { version = "0.3", path = "../zeus-widgets" }

xcap = { version = "0.8.1", optional = true }
enigo = { version = "0.6.1", optional = true }
rqrr = { version = "0.10.0", optional = true }

secure-types = { version = "0.2", optional = true }

[features]
secure-types = ["dep:secure-types", "zeus-widgets/secure-types"]
qr-scanner = ["dep:secure-types", "dep:xcap", "dep:enigo", "dep:rqrr"]
all = ["secure-types", "qr-scanner"]

[dev-dependencies]
eframe = "=0.33.3"
egui_extras = { version = "=0.33.3", features = ["image"] }