[package]
name = "zeus-waku-broadcaster"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Railgun Waku Broadcaster client for private gas-abstracted transactions"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Railgun address decoding + BabyJubJub viewing key extraction (for broadcaster ECDH)
zeus-railgun = { path = "../zeus-railgun" }

# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
kanal = "0.1.1"

# Crypto for broadcaster encryption (AES-GCM + support for ECDH on viewing keys)
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"

# Misc
chrono = "0.4"
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }