[package]
name = "zeus-wallet"
description = "Generate Hierarchical Deterministic Wallets (BIP32) from a username and password"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-wallet"
keywords = ["bip32", "crypto", "derivation"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies.zeus-bip32]
version = "0.1.0"
path = "../zeus-bip32"

[dependencies.k256]
version = "=0.13.4"

[dependencies.sha3]
version = "=0.10.8"

[dependencies.rand]
version = "=0.8"

[dependencies.alloy-signer-local]
version = "=1.1.2"
features = ["mnemonic"]

[dependencies.alloy-network]
version = "=1.1.2"

[dependencies.alloy-primitives]
version = "=1.4.1"

[dependencies.secure-types]
version = "0.2"

[dependencies.argon2-rs]
version = "0.1"
features = ["zeroize"]

[dependencies.anyhow]
version = "=1.0.99"

[dependencies.serde]
version = "=1.0.228"
features = ["derive"]
optional = true

[features]
serde = ["dep:serde", "secure-types/serde"]

[dev-dependencies]
serde_json = "=1.0.145"
bip39 = "2"