[package]
name = "zeus-wallet"
description = "Generate Hierarchical Deterministic Wallets (BIP32) from a username and password"
readme = "readme.md"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-wallet"
keywords = ["bip32", "crypto", "derivation"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
zeus-bip32 = { path = "../zeus-bip32", version = "0.1.0" }

alloy-signer-local = { version = "=1.7.3", features = ["mnemonic"] }
alloy-network = "=1.7.3"
alloy-primitives = "=1.5.7"

k256 = "=0.13.4"
sha3 = "=0.10.8"
rand = "=0.8"
secure-types = "0.2"
argon2-rs = "0.1"
anyhow = "=1.0.99"
serde = { version = "=1.0.228", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "secure-types/serde"]

[dev-dependencies]
serde_json = "=1.0.145"
bip39 = "2"