[package]
name = "zeus-widgets"
version = "0.1.0"
readme = "readme.md"
description = "A collection of widgets for egui"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-widgets"
keywords = ["egui", "ui", "themes", "style"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
edition = "2024"


[dependencies.egui]
version = "0.33.0"

[dependencies.secure-types]
version = "0.2"