[package]
name = "zeus-widgets"
version = "0.3.0"
readme = "readme.md"
description = "A collection of widgets for egui"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-widgets"
keywords = ["egui", "ui", "themes", "style"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
edition = "2024"


[dependencies.egui]
version = "0.33.3"

[dependencies.zeus-theme]
version = "0.3"
path = "../zeus-theme"

[dependencies.secure-types]
version = "0.2"
optional = true

[dependencies.xcap]
version = "0.8.1"
optional = true

[dependencies.enigo]
version = "0.6.1"
optional = true

[dependencies.rqrr]
version = "0.10.0"
optional = true

[features]
secure-types = ["dep:secure-types"]
qr-scanner = ["dep:secure-types", "dep:xcap", "dep:enigo", "dep:rqrr"]