[package]
name = "zeus-widgets"
version = "0.4.0"
readme = "readme.md"
description = "A collection of widgets for egui"
repository = "https://github.com/greekfetacheese/zeus/tree/master/crates/zeus-widgets"
keywords = ["egui", "ui", "themes", "style"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
egui = "0.34"
zeus-theme = { path = "../zeus-theme", version = "0.4" }
secure-types = { version = "0.2", optional = true }

[features]
secure-types = ["dep:secure-types"]