[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[dependencies]
currency = { path = "../currency" }
abi = { path = "../abi" }
utils = { path = "../utils" }
types = { path = "../types" }
wallet = {path = "../wallet"}
revm-utils = { path = "../revm-utils", optional = false}

uniswap_v3_math = { git = "https://github.com/greekfetacheese/uniswap-v3-math.git", branch = "main" }

alloy-dyn-abi = {version = "1.0.0", features = ["eip712"]}
alloy-primitives = "1.0.0"
alloy-sol-types = { version = "1" }

alloy-rpc-types = "0.14.0"
alloy-contract = "0.14.0"
alloy-provider = "0.14.0"

tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
serde = "1.0.217"
serde_json = "1.0.138"
anyhow = "1.0.95"
tracing = "0.1.41"

[dev-dependencies]
revm-utils = { path = "../revm-utils" }
url = "2"

[features]
#position = ["dep:revm-utils"]
