[package]
name = "amm"
version = "0.1.0"
edition = "2024"

[dependencies]
currency = { path = "../currency" }
abi = { path = "../abi" }
utils = { path = "../utils" }
types = { path = "../types" }

uniswap_v3_math = { git = "https://github.com/greekfetacheese/uniswap-v3-math.git", branch = "main" }

alloy-dyn-abi = {version = "1", features = ["eip712"]}
alloy-primitives = "1.3.0"
alloy-sol-types = { version = "1" }

alloy-rpc-types = "1"
alloy-contract = "1"
alloy-provider = "1"

rayon = "1.10.0"
tokio = {version = "1", features = ["rt-multi-thread"]}
serde = "1"
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
url = "2"
