[package]
name = "dapps"
version = "0.1.0"
edition = "2024"

[dependencies]
abi = {path = "../abi"}
types = { path = "../types" }

alloy-sol-types = "0.8.20"
alloy-primitives = "0.8.20"

alloy-rpc-types = {version = "0.13.0"}
alloy-contract = "0.13.0"
alloy-provider = "0.13.0"

reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0.95"