[package]
name = "revm-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { path = "../abi" }
types = { path = "../types"}

revm = { version = "22.0.1", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

op-revm = { version = " 3.0.2", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

alloy-sol-types = {version = "1", features = ["json"]}
alloy-primitives = "1.1.0"
alloy-signer = "0.15.10"
alloy-signer-local = "0.15.10"

alloy-rpc-types = "0.15.10"
alloy-contract = "0.15.10"
alloy-provider = "0.15.10"
alloy-transport = "0.15.10"

# Async
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
futures = "0.3.5"
futures-util = "0.3.30"

# Error handling
anyhow = "1.0.44"
thiserror = "1.0.37"
eyre = "0.6.8"

[dev-dependencies]
tokio = "1"