[package]
name = "revm-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { path = "../abi" }
types = { path = "../types"}

revm = { version = "28.0.0", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

op-revm = { version = " 9.0.0", features = [
    "std",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
] }

alloy-sol-types = {version = "1", features = ["json"]}
alloy-primitives = "1.3.0"
alloy-signer-local = "1"

alloy-rpc-types = "1"
alloy-contract = "1"
alloy-provider = "1"
alloy-transport = "1"

# Async
tokio = {version = "1", features = ["rt-multi-thread"]}
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"