[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../types" }
abi = {path = "../abi"}

alloy-sol-types = {version = "1", features = ["json"]}
alloy-dyn-abi = {version = "1", features = ["eip712"]}
alloy-primitives = "1.3.0"

alloy-rpc-types = "1"
alloy-contract = "1"
alloy-provider = {version = "1", features = ["ws"]}
alloy-network = "1"
alloy-transport = {version = "1", features = ["throttle"]}
alloy-rpc-client = {version = "1", features = ["reqwest"]}

alloy-signer = {version = "1", features = ["eip712"]}
alloy-signer-local = "1"

secure-types = {version = "0.1", features = ["serde"]}
memsec = "0.7.0"

anyhow = "1"
tracing = "0.1"
serde = "1"
serde_json = "1"
url = "2"
tokio = {version = "1", features = ["rt-multi-thread"]}
futures = "0.3"

[dev-dependencies]
rand = "0.8"