[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-signer = {version = "1", features = ["eip712"]}
alloy-signer-local = "1"
alloy-network = "1"
alloy-primitives = "1.2.0"

serde = "1.0.217"
serde_json = "1.0.138"
secure-types = {git = "https://github.com/greekfetacheese/secure-types.git", branch = "master", features = ["serde"]}
memsec = "0.7.0"